--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<h2>我們幹啥</h2>
 							<h2>Stuff we do</h2>
 						</header>
-						<p>我們會不固定時間在Clubhouse組織各路朋友一起“以歌會友”，並且目前已開始以自由分享為目的，陸續將成員們的各類歌曲錄音進行收集整理，並上傳至我們的Podcast平台，供成員們自由交流和聽友們分享使用。對話訪談類節目已在計劃中，不日將與大家分享。</p>
+						<p>我們會不固定時間在Clubhouse組織各路朋友一起“以歌會友”，並且目前已開始以自由分享為目的，陸續將成員們的各類歌曲錄音進行收集整理，並上傳至我們的Podcast平台，供成員們自由交流和聽友們分享使用。對話訪談類節目已在計劃中，不日將上線。</p>
 						<ul class="icons-grid">
 							<li>
 								<span class="icon solid major fa-camera-retro"></span>
@@ -85,7 +85,7 @@
 							<h2>另一件重要的事</h2>
 							<h2>One more thing</h2>
 						</header>
-						<p>我們是自發形成的民間非營利組織，是真正的“用愛發電”，網站搭建平台、網頁架構、圖片均來自開源平台。歌曲上傳託管為免費服務。成員們的全部付出，均為自發無報酬行為。在此特別感謝每位參與我們各類活動的朋友，感謝你們為我們的聽眾奉獻你們最精彩的表演！也感謝大家為營造這片文化淨土而付出的努力！</p>
+						<p>我們是自發形成的民間非營利組織，是真正的“用愛發電”，網站搭建平台、網頁架構、圖片均來自開源平台；網站和歌曲託管均為免費服務。成員們的全部付出，均為自發無報酬行為。在此特別感謝每位參與我們各類活動的朋友，感謝你們為我們的聽眾奉獻你們最精彩的表演！也感謝大家為營造這片文化淨土而付出的努力！</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
