--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>歡迎來到勞動人民文化宮</title>
+		<title>🎙歡迎來到勞動人民文化宮</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>🎙勞動人民文化宮</h1>
+					<h1>勞動人民文化宮</h1>
 					<h1>CULTURAL PALACE</h1>
 					<p>歌曲 | 曲藝 | 對話 <a href="http://html5up.net"></a></p>
 				</header>
