--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<h2>另一件重要的事</h2>
 							<h2>One more thing</h2>
 						</header>
-						<p>我們是自發形成的民間非營利組織，是真正的“用愛發電”，網站搭建平台、網頁架構、圖片均來自開源平台；網站和歌曲託管均為免費服務。成員們的全部付出，均為自發無報酬行為。在此特別感謝每位參與我們各類活動的朋友，感謝你們為我們的聽眾奉獻你們最精彩的表演！</p>
+						<p>我們是自發形成的民間非營利組織，是真正的“用愛發電”，網站搭建平台、網頁架構、圖片均來自開源平台；網站和歌曲託管均為免費服務。成員們的全部付出，均為自發無報酬行為。在此特別感謝每位參與我們各類活動的朋友，感謝你們為我們的聽眾奉獻你們最精彩的表演！也感謝大家為營造這片文化淨土而付出的努力！</p>
 						<p>也感謝大家為營造這片文化淨土而付出的努力！</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
@@ -438,7 +438,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fas fa-podcast"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
