--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-						<i href="#" class="fa fa-rss" aria-hidden="true"></i>
+						<i href="https://anchor.fm/s/2c70bbc/podcast/rss" class="fa fa-rss" aria-hidden="true"></i>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; 勞動人民文化宮</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Images: <a href="http://unsplash.com">Unsplash</a></li>
