--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 						<i href="https://anchor.fm/s/2c70bbc/podcast/rss" class="fa fa-rss" aria-hidden="true"></i>
+						<i href="https://podcasts.apple.com/us/podcast/%E8%91%9B%E6%8A%92%E5%B7%B1%E8%A7%81/id1515123040?uo=4" class="fa fa-podcast" aria-hidden="true"></i>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; 勞動人民文化宮</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Images: <a href="http://unsplash.com">Unsplash</a></li>
