--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 						<i href="https://anchor.fm/s/2c70bbc/podcast/rss" class="fa fa-rss" aria-hidden="true"></i>
 						<i href="https://podcasts.apple.com/us/podcast/%E8%91%9B%E6%8A%92%E5%B7%B1%E8%A7%81/id1515123040?uo=4" class="fa fa-podcast" aria-hidden="true"></i>
+						<i href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace" class="fa fa-google" aria-hidden="true"></i>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; 勞動人民文化宮</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Images: <a href="http://unsplash.com">Unsplash</a></li>
