--- a/index.html
+++ b/index.html
@@ -438,6 +438,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
+						<li><a href="https://anchor.fm/s/2c70bbc/podcast/rss" class="icon brands fa fa-rss"><span class="label">RSS</span></a></li>
+						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 						<i href="https://anchor.fm/s/2c70bbc/podcast/rss" class="fa fa-rss" aria-hidden="true"></i>
 						<i href="https://podcasts.apple.com/us/podcast/%E8%91%9B%E6%8A%92%E5%B7%B1%E8%A7%81/id1515123040?uo=4" class="fa fa-podcast" aria-hidden="true"></i>
