--- a/index.html
+++ b/index.html
@@ -59,13 +59,9 @@
 						<ul class="icons-grid">
 							<li>
 								<span class="icon solid major fa-camera-retro"></span>
-								<h2>自</h2>
-								<span class="icon solid major fa-pencil-alt"></span>
-								<h2>由</h2>
+								<h2>自</h2><span class="icon solid major fa-pencil-alt"></span><h2>由</h2>
 								<span class="icon solid major fa-code"></span>
-								<h2>分</h2>
-								<span class="icon solid major fa-coffee"></span>
-								<h2>享</h2>
+								<h2>分</h2><span class="icon solid major fa-coffee"></span><h2>享</h2>
 							</li>
 						</ul>
 					</div>
