--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<p>可在更多平台搜索 勞動人民文化宮</p>
 						<ul class="icons-grid">
 							<li>
-								<span class="icon solid major fa-camera-retro"></span>
+								<span class="fa-solid fa-microphone"></span>
 								<h2>自</h2>
 							</li>
 							<li>
