--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
 						<ul class="icons-grid">
 							<li>
 								<span class="icon solid major fa-camera-retro"></span>
-								<h2>自</h2>
+								<h2>發現身邊的美好</h2>
 							</li>
 							<li>
 								<span class="icon solid major fa-pencil-alt"></span>
-								<h2>由</h2>
+								<h2>紀錄我們的故事</h2>
 							</li>
 							<li>
 								<span class="icon solid major fa-code"></span>
-								<h2>分</h2>
+								<h2>傳播樂觀的精神</h2>
 							</li>
 							<li>
 								<span class="icon solid major fa-coffee"></span>
-								<h2>享</h2>
+								<h2>分享真實的快樂</h2>
 							</li>
 						</ul>
 					</div>
