--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>勞動人民文化宮</h1>
+					
 					<h1>CULTURAL PALACE</h1>
 					<p>歌曲 | 曲藝 | 對話 <a href="http://html5up.net"></a></p>
 				</header>
@@ -49,10 +50,11 @@
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>我們做的事</h2>
+							<h2>我們做什麼</h2>
 							<h2>Stuff we do</h2>
 						</header>
 						<p>我們會不固定時間在Clubhouse組織各路朋友一起“以歌會友”，並且目前已開始以自由分享為目的，陸續將成員們的各類歌曲錄音進行收集整理，並上傳至我們的Podcast平台，供成員們自由交流和聽友們分享使用。對話訪談類節目已在計劃中，不日將上線。</p>
+						<p>歡迎所有有意願分享你作品的朋友加入我們！</p>
 						<iframe src="https://anchor.fm/culturalpalace/embed" height="102px" width="298px" frameborder="0" scrolling="no"></iframe>
 						<p>可以在更多平台搜索 勞動人民文化宮</p>
 					<a href="#three" class="goto-next scrolly">Next</a>
