--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 			<section id="header">
 				<header class="major">
 					<h1>勞動人民文化宮</h1>
-					<h1> </h1>
-					<h1>CULTURAL PALACE</h1>
-					<p>歌曲 | 曲藝 | 對話 <a href="http://html5up.net"></a></p>
+					<p>CULTURAL PALACE<a href="https://anchor.fm/culturalpalace"></a></p>
+					<p>歌曲 | 曲藝 | 對話</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
@@ -70,7 +69,7 @@
 							<h2>另一件重要的事</h2>
 							<h2>One more thing</h2>
 						</header>
-						<p>我們是自發形成的民間非營利組織，是真正的“用愛發電”，網站搭建平台、網頁架構、圖片均來自開源平台；網站和歌曲託管均為免費服務。成員們的全部付出，均為自發無報酬行為。在此特別感謝每位參與我們各類活動的朋友，感謝你們為我們的聽眾奉獻你們最精彩的表演！也感謝大家為營造這片文化淨土而付出的努力！</p>
+						<p>我們是自發形成的民間非營利組織，是真正的“用愛發電”，網站搭建平台、網頁架構、圖片均來自開源平台；網站和歌曲託管均為免費服務。成員們的全部付出，均為自發無報酬行為。在此特別感謝每位參與我們各類活動的朋友，感謝你們為我們的聽眾奉獻你們最精彩的表演！</p>
 						<p>也感謝大家為營造這片文化淨土而付出的努力！</p>
 					</div>
 						<ul class="icons-grid">
