--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			<section id="header">
 				<header class="major">
 					<h1>勞動人民文化宮</h1>
-					<p>CULTURAL PALACE<a href="https://anchor.fm/culturalpalace"></a></p>
+					<p> </p>
+					<h1>CULTURAL PALACE</h1>
 					<p>歌曲 | 曲藝 | 對話</p>
 				</header>
 				<div class="container">
