--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>Who are we</h2>
 						</header>
 						<p>我們是一群熱愛生活的人，因Clubhouse結緣，因共同的興趣愛好走到一起。這裏沒有因種種觀點或立場的不同而引起的紛爭；只有因個個故事或歌曲的精彩而引起的共鳴。因此我們歡迎同樣熱愛生活的你加入我們！</p>
-						<a href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace">這裡是勞動人民文化宮</a>
+						<p><a href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace">這裡是勞動人民文化宮</a></p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -56,7 +56,7 @@
 						<p>我們會不固定時間在Clubhouse組織各路朋友一起“以歌會友”，並且目前已開始以自由分享為目的，陸續將成員們的各類歌曲錄音進行收集整理，並上傳至我們的Podcast平台，供成員們自由交流和聽友們分享使用。對話訪談類節目已在計劃中，不日將上線。</p>
 						<p>歡迎所有有意願分享你作品的朋友加入我們！</p>
 						<iframe src="https://anchor.fm/culturalpalace/embed" height="102px" width="298px" frameborder="0" scrolling="no"></iframe>
-						<p>可以在更多平台搜索</p><a href="https://anchor.fm/culturalpalace">勞動人民文化宮</a>
+						<p>可以在更多平台搜索<a href="https://anchor.fm/culturalpalace">勞動人民文化宮</a></p>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
