--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>我們做什麼</h2>
+							<h2>我們在做什麼</h2>
 							<h2>Stuff we do</h2>
 						</header>
 						<p>我們會不固定時間在Clubhouse組織各路朋友一起“以歌會友”，並且目前已開始以自由分享為目的，陸續將成員們的各類歌曲錄音進行收集整理，並上傳至我們的Podcast平台，供成員們自由交流和聽友們分享使用。對話訪談類節目已在計劃中，不日將上線。</p>
@@ -446,7 +446,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; <a href="https://anchor.fm/culturalpalace">勞動人民文化宮</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; <a href="https://anchor.fm/culturalpalace">勞動人民文化宮</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Photo by <a href="https://unsplash.com/@zhangkaiyv?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">zhang kaiyv</a> on <a href="https://unsplash.com/@zhangkaiyv?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li>
 					</ul>
 				</footer>
 			</section>
