--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://podcasts.apple.com/us/podcast/%E5%8B%9E%E5%8B%95%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AE/id1515123040?uo=4" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://anchor.fm/s/2c70bbc/podcast/rss" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace" class="icon brands alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="mailto:culturalpalace@outlook.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
