--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 						</header>
 						<p>我們是一群熱愛生活的人，因Clubhouse結緣，因共同的興趣愛好走到一起。這裏沒有因種種觀點或立場的不同而引起的紛爭；只有因個個故事或歌曲的精彩而引起的共鳴。因此我們歡迎同樣熱愛生活的你加入我們！</p>
 						<p>這裡是勞動人民文化宮</p>
-					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
@@ -83,11 +82,11 @@
 								<h2>紀錄我們的故事</h2>
 							</li>
 							<li>
-								<span class="icon solid major fa-code"></span>
+								<span class="icon solid major fa-broadcast-tower"></span>
 								<h2>傳播樂觀的精神</h2>
 							</li>
 							<li>
-								<span class="icon solid major fa-coffee"></span>
+								<span class="icon solid major fa-share-alt"></span>
 								<h2>分享真實的快樂</h2>
 							</li>
 						</ul>
@@ -439,8 +438,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://podcasts.apple.com/us/podcast/%E5%8B%9E%E5%8B%95%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AE/id1515123040?uo=4" class="icon brands alt fa-apple"><span class="label">Podcast</span></a></li>
-						<li><a href="https://anchor.fm/s/2c70bbc/podcast/rss" class="icon brands alt fa-html5"><span class="label">Rss</span></a></li>
+						<li><a href="https://podcasts.apple.com/us/podcast/%E5%8B%9E%E5%8B%95%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AE/id1515123040?uo=4" class="icon solid alt fa-podcast"><span class="label">Podcast</span></a></li>
+						<li><a href="https://anchor.fm/culturalpalace" class="icon brands alt fa-spotify"><span class="label">Rss</span></a></li>
+						<li><a href="https://anchor.fm/s/2c70bbc/podcast/rss" class="icon solid alt fa-rss"><span class="label">Rss</span></a></li>
 						<li><a href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace" class="icon brands alt fa-chrome"><span class="label">Google</span></a></li>
 						<li><a href="mailto:culturalpalace@outlook.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
