--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>🎙歡迎來到勞動人民文化宮</title>
+		<i class="fas fa-blog"></i>
+		<title>歡迎來到勞動人民文化宮</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
