--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<link rel="shortcut icon" href="images/favicon.ico"/>
-		<title>歡迎來到勞動人民文化宮</title>
+		<title>勞動人民文化宮</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
