--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
 						</header>
 						<p>我們目前會在不固定的時間段，於Clubhouse上組織各路朋友一起“以歌會友”，並且以自由分享為目的，我們已經於2021年10月開始，陸續將成員們的各類歌曲錄音進行收集整理，並上傳至我們的Podcast平台，供成員們自由交流和聽友們分享使用。對話訪談類節目已在計劃中，不日將上線。</p>
 						<p>歡迎所有有意願分享你作品的朋友加入我們！</p>
+						<p>可以通過網頁或郵件方式與我們聯繫！</p>
 						<iframe src="https://anchor.fm/culturalpalace/embed" height="102px" width="298px" frameborder="0" scrolling="no"></iframe>
 						<p>可以在更多平台搜索 勞動人民文化宮</p>
+						<ul class="icons">
+						<li><a href="https://podcasts.apple.com/us/podcast/%E5%8B%9E%E5%8B%95%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AE/id1515123040?uo=4" class="icon solid alt fa-podcast"><span class="label">Podcast</span></a></li><li><a href="https://anchor.fm/culturalpalace" class="icon brands alt fa-spotify"><span class="label">Spotify</span></a></li><li><a href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace" class="icon brands alt fa-chrome"><span class="label">Clubhouse</span></a></li>
+					</ul>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
