--- a/lens/index.html
+++ b/lens/index.html
@@ -20,12 +20,12 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Lens</h1>
-						<p>Just test site by 布萊恩</p>
+						<p></p>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="CulturalPalace@Outlook.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:CulturalPalace@Outlook.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
 
