--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<iframe src="https://anchor.fm/culturalpalace/embed" height="102px" width="298px" frameborder="0" scrolling="no"></iframe>
 						<p>在更多平台搜索 勞動人民文化宮</p>
 						<ul class="icons">
-						<li><a href="https://podcasts.apple.com/us/podcast/%E5%8B%9E%E5%8B%95%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AE/id1515123040?uo=4" class="icon solid alt fa-podcast"><span class="label">Podcast</span></a></li><li><a href="https://anchor.fm/culturalpalace" class="icon brands alt fa-spotify"><span class="label">Spotify</span></a></li><li><a href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace" class="icon brands alt fa-chrome"><span class="label">Clubhouse</span></a></li>
+						<li><a href="https://podcasts.apple.com/us/podcast/%E5%8B%9E%E5%8B%95%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AE/id1515123040?uo=4" class="icon solid alt fa-podcast"><span class="label">Podcast</span></a></li><li><a href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace" class="icon brands alt fa-chrome"><span class="label">Clubhouse</span></a></li>
 					</ul>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</div>
@@ -449,7 +449,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://podcasts.apple.com/us/podcast/%E5%8B%9E%E5%8B%95%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AE/id1515123040?uo=4" class="icon solid alt fa-podcast"><span class="label">Podcast</span></a></li><li><a href="https://anchor.fm/culturalpalace" class="icon brands alt fa-spotify"><span class="label">Spotify</span></a></li><li><a href="https://anchor.fm/s/2c70bbc/podcast/rss" class="icon solid alt fa-rss"><span class="label">Rss</span></a></li><li><a href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace" class="icon brands alt fa-chrome"><span class="label">Clubhouse</span></a></li><li><a href="mailto:culturalpalace@outlook.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://podcasts.apple.com/us/podcast/%E5%8B%9E%E5%8B%95%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AE/id1515123040?uo=4" class="icon solid alt fa-podcast"><span class="label">Podcast</span></a></li><li><a href="https://anchor.fm/s/2c70bbc/podcast/rss" class="icon solid alt fa-rss"><span class="label">Rss</span></a></li><li><a href="https://www.clubhouse.com/club/%E5%8A%B3%E5%8A%A8%E4%BA%BA%E6%B0%91%E6%96%87%E5%8C%96%E5%AE%AB-cultural-palace" class="icon brands alt fa-chrome"><span class="label">Clubhouse</span></a></li><li><a href="mailto:culturalpalace@outlook.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; <a href="https://anchor.fm/culturalpalace">勞動人民文化宮</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Photo by <a href="https://unsplash.com/@zhangkaiyv?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">zhang kaiyv</a> on <a href="https://unsplash.com/@zhangkaiyv?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></li><li>Lens: <a href="http://bjwpcp.github.io/lens/index.html">HTML5 UP</a></li>
